# rox

./: Cargo.toml  README.md
editors/rox-vscode-extension/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
editors/rox-vscode-extension/syntaxes/: rox.tmLanguage.json
examples/: example.rox
src/: ast_types.rs  environment.rs  errors.rs  expression_visitor.rs  interpreter.rs  main.rs  parser.rs  resolver.rs  scanner.rs  statement_visitor.rs  stmt.rs  types.rs
src/rox-errors/: Cargo.toml
src/rox-errors/src/: lib.rs
src/rox-errors/src/macro-errors/: Cargo.toml
src/rox-errors/src/macro-errors/src/: lib.rs
src/rox-interpreter/: Cargo.toml
src/rox-interpreter/src/: environment.rs  lib.rs  resolver.rs  value.rs
src/rox-parser/: Cargo.toml
src/rox-parser/src/: expression.rs  expression_visitor.rs  lib.rs  scanner.rs  statement.rs  statement_visitor.rs  token.rs
