[package]
name = "rox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
rox-parser = { path = "src/rox-parser" }
rox-interpreter = { path = "src/rox-interpreter" }
rox-errors = { path = "src/rox-errors" }
